--- a/app/templates/medicos/ver_nota.html
+++ b/app/templates/medicos/ver_nota.html
@@ -49,7 +49,11 @@
         <div class="card-footer">
             <a href="{{ url_for('medicos.editar_nota', id_nota=nota.id_nota) }}" class="btn btn-warning">Editar</a>
 	    <a href="{{ url_for('medicos.generar_nota_pdf', id_nota=nota.id_nota) }}" class="btn btn-warning">PDF</a>
-            <a href="{{ url_for('medicos.listar_notas') }}" class="btn btn-secondary">Volver</a>
+           <a href="{{ url_for('medicos.listar_notas', id_paciente=nota.id_paciente, query=request.args.get('query', '')) }}" class="btn btn-secondary">Volver</a>
+
+           
+
+
         </div>
     </div>
 </div>
