--- a/app/templates/medicos/nueva_nota.html
+++ b/app/templates/medicos/nueva_nota.html
@@ -8,15 +8,19 @@
     <!-- Paciente fijo -->
     <div class="mb-3">
       <label class="form-label">Paciente</label>
-      <input type="text" class="form-control" value="{{ paciente.nombre }} ({{ paciente.curp }})" readonly>
-      {{ form.id_paciente(class="d-none") }}
+     <input type="text" class="form-control" value="{{ paciente.nombre }} ({{ paciente.curp }})" readonly>
+{{ form.id_paciente(type="hidden") }}
     </div>
+
+
+
+
 
     <!-- Expediente -->
     <div class="mb-3">
   <label class="form-label">Expediente</label>
-  <input type="text" class="form-control" value="{{ expediente.id_archivo }} - {{ expediente.ubicacion_fisica }}" readonly>
-  {{ form.id_expediente(class="d-none") }} {# Campo oculto para enviar al guardar #}
+ <input type="text" class="form-control" value="{{ expediente.id_archivo }} - {{ expediente.ubicacion_fisica }}" readonly>
+{{ form.id_expediente(type="hidden") }}
 </div>
 
     <div class="row mt-2">
@@ -43,10 +47,11 @@
     <div class="form-group mt-2">{{ form.plan.label }} {{ form.plan(class="form-control", rows=3) }}</div>
     <div class="form-group mt-2">{{ form.pronostico.label }} {{ form.pronostico(class="form-control", rows=2) }}</div>
     <div class="form-group mt-2">{{ form.laboratorio.label }} {{ form.laboratorio(class="form-control", rows=3) }}</div>
-
-    <button class="btn btn-primary mt-3" type="submit">{{ form.submit.label.text }}</button>
-    
+    <div class="mt-3">
+    {{ form.submit(class="btn btn-primary") }}
     <a href="{{ url_for('medicos.listar_notas', id_paciente=paciente.id_paciente, query=request.args.get('query', '')) }}" class="btn btn-secondary">Volver</a>
+</div>
+   
 
   </form>
 </div>
